src/test/ui/expr/if/attrs/bad-cfg.stderr
error: removing an expression is not supported in this position
  --> $DIR/bad-cfg.rs:4:13
   |
LL |     let _ = #[cfg(FALSE)] if true {};
   |             ^^^^^^^^^^^^^

error: aborting due to previous error

